--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: installing surge
-        run: npm install --global surge
+        run: npm install -g surge
       - name: deploying surge
         run: surge ./ waqassafdar91bootcamp.surge.sh --token $ {{ secrets.swcret_token }}
             
