--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -30,5 +30,5 @@ jobs:
       - name: installing surge
         run: npm install -g surge
       - name: deploying surge
-        run: surge ./ waqassafdar91bootcamp.surge.sh --token $ {{ secrets.swcret_token }}
+        run: surge ./ waqassafdar91bootcamp.surge.sh --token $ {{ secrets.secret_token }}
             
